# mandelbrot

./: .gitignore  CMakeLists.txt  CMakeListsLinux.txt  graphics.h  main.cpp  setup.sh  util.cpp  util.h
graphics/: graphics.cpp  graphics.h  simple.h  texture.h
include/glad/: glad.h
res/: mandelbrot_f.glsl  simple_f.glsl  simple_v.glsl  texture_f.glsl  texture_v.glsl  tilesheet.xcf
src/: Player.cpp  World.cpp  events.h  game.cpp  game.h  grid.cpp  grid.h  main.cpp  mandelbrot.cpp  mandelbrot.h  physics.cpp  physics.h  util.cpp  util.h
src/glad/: glad.c
src/graphics/: graphics.cpp  graphics.h  grid.h  simple.cpp  texbuffer.cpp  texbuffer.h  texture.cpp
